[package]
name = "konwerter"
version = "2.0.0"
edition = "2021"
authors = ["FraI3mega <projeapp2@gmail.com>"]
description = "Konwerter systemów liczbowych"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.8", features = ["derive"] }
colored = "2.0.4"

